Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-06-30 Tim
 PATCH: [ 1514645 ] Various Updates in German Translation for WinMerge 2.5
  Src/Languages/German: MergeGerman.rc

2006-06-29 Kimmo
 PATCH: [ 1513618 ] Fix Merge.rc translation id
  Src: Merge.rc

2006-06-27 Kimmo
 PATCH: [ 1512708 ] Fix compile with VS2005
  Also additional cleanup for CCrystalTextView::GetMarginWidth()
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h
 PATCH: [ 1512726 ] Fix combining filesize from two values
  Src: DiffFileInfo.cpp DirScan.cpp FileInfo.cpp FileInfo.h
 PATCH: [ 1512775 ] Fix encoding columns showing -1
  Src: FileTextEncoding.cpp FileTextEncoding.h

2006-06-26 Kimmo
 PATCH: [ 1510596 ] Updated Readme-Swedish.txt
  Submitted by Hans Eriksson
  Docs/Users/Languages: ReadMe-Swedish.txt
 PATCH: [ 1510600 ] Updated MergeSwedish.rc file for 2.5.5.1+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 BUG: [ 1483242 ] Needless resource file 'MergeSwedish_LastTranslation.rc'?
  Remove unneeded file
  Removed: Src/Languages/Swedish: MergeSwedish_LastTranslation.rc
 BUG: [ 1489034 ] Src/Common/LanguageSelect.rc unused?
  Remove unneeded file
  Removed: Src/Common/LanguageSelect.rc
 Remove unused files (language.h & language.c)
  Removed: Src: language.c language.h

2006-06-21 WinMerge experimental release 2.5.5.1 (cvs)

2006-06-21 Kimmo
 PATCH: [ 1509505 ] Manual: new compare method and options export/import
  Docs/Users/Manual: Configuration.xml
 Bump manual revision to 1.2.4
  Docs/Users/Manual: WinMerge_help.xml
 Bump ShellExtension version to 1.7.2
  ShellExtension: ShellExtension.rc

2006-06-20 Kimmo
 BUG: [ 1505763 ] Crash after closing file compare window
  Src: MergeEditView.cpp
 PATCH: [ 1508865 ] Improve error handling for loading file filters
  Src: FileFilterHelper.cpp FileFilterMgr.cpp FileFilterMgr.h FileFiltersDlg.cpp
   FileFiltersDlg.h